# killer-b

./: .gitignore  CMakeLists.txt
.github/workflows/: build-mac.yml  build-windows.yml  build.yml
Installer/: welcome.html
Installer/May 6/Killer B 06-05/Killer-B-Synth-Source/: CMakeLists.txt  README.md
Installer/May 6/Killer B 06-05/Killer-B-Synth-Source/Installer/: license.html  windows-installer.nsi
Installer/May 6/Killer B 06-05/Killer-B-Synth-Source/Source/: KillaBLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: KillaBLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.h
delivery/: README-DELIVERY.txt
delivery/Killer-B-Synth-Client-Package-20260425-235739/: README.txt
delivery/Killer-B-Synth-Client-Package-20260425-235739/Killer-B-Synth-Source/: .gitignore
delivery/Killer-B-Synth-Client-Package-20260425-235739/Killer-B-Synth-Source/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
delivery/Killer-B-Synth-Client-Package-20260425-235739/Killer-B-Synth-Source/scripts/: build-windows-installer.ps1
delivery/Killer-B-Synth-Client-Package-20260425-235739/VST3/Killer B Synth.vst3/Contents/Resources/: moduleinfo.json
delivery/Killer-B-Synth-Source/: CMakeLists.txt  README.md
delivery/Killer-B-Synth-Source/.github/workflows/: build-mac.yml  build-windows.yml
delivery/Killer-B-Synth-Source/Installer/: distribution.xml
delivery/Killer-B-Synth-Source/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
delivery/Killerb-26-04/: README.txt
delivery/Killerb-26-04/Killer-B-Synth-Source/Source/: KillaBLookAndFeel.h  SynthVoice.h
scripts/: build-windows-installer.ps1
